k8s/github-pr-dashboard/add-oauth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "pr-dashboard-deployment"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: "github-pr-dashboard"
    spec:
      containers:
        - name: pr-dashboard
          image:  us.gcr.io/__GOOGLE_CLOUD_PROJECET__/github-pr-dashboard:latest
          ports:
          - containerPort: 8080
          imagePullPolicy: IfNotPresent
        - name: oauth2-proxy
          image: docker.io/colemickens/oauth2_proxy:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 4180
            protocol: TCP
          args:
          - --provider=github
          - --email-domain=*
          - --upstream=http://localhost:8080
          - --http-address=0.0.0.0:4180
          # Register a new application
          # https://github.com/settings/applications/new
---
apiVersion: v1
kind: Service
metadata:
  name: "pr-dashboard-service"
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4180
  selector:
    app: "github-pr-dashboard"
  sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "pr-dashboard-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ryan-hochstetler.ryanh.org
    secretName: pr-dashboard-ingress
  backend:
    serviceName: pr-dashboard-service
    servicePort: 80
  rules:
  - host: ryan-hochstetler.ryanh.org
    http:
      paths:
      - path: /
        backend:
          serviceName: pr-dashboard-service
          servicePort: 80
